@@ -1,11 +1,19 @@
 $Id$
 
+2005-09-03 Sebastian Dransfeld (sebastid at tango flipp net)
+       * src/plugin/imap.c: Fix memleak, and remove server
+         from server list before destroying it.
+
 2005-09-03 Tilman Sauerbeck (tilman at code-monkey de)
         * src/plugin/imap.c: Merged Sebastian Dransfeld's patch that
           implents "connection sharing"
         * src/plugin/pop3.c: Updated for recent imap changes
         * src/plugin/{imap,pop3}.c: Remove event handlers for server
           events on shutdown (Sebastian Dransfeld)
+
+2005-09-03 Sebastian Dransfeld (sebastid at tango flipp net)
+        * m4/ac_path_generic.m4: Remove trailing info after x.y.z
+          in versions.
 
 2005-08-29 Michael Jennings (mej at eterm org)
         * Makefile.am, embrace.spec:  Applied patch from Jim Perrin
